ifm-spacing-horizontal fix

--- a/website/src/components/Homepage/Features/Features.module.scss
+++ b/website/src/components/Homepage/Features/Features.module.scss
@@ -3,7 +3,6 @@
 .featuresGap {
   --ifm-col-width: calc(1 / 3 * 100%);
   margin-bottom: 91px;
-  padding-left: 14px;
 }
 
 .featureImage {
