--- a/website/src/components/Homepage/Header/HomepageHeader.module.scss
+++ b/website/src/components/Homepage/Header/HomepageHeader.module.scss
@@ -5,9 +5,10 @@
 .heroBanner {
   --ifm-heading-color: #fff;
 
+
   width: 100%;
   height: calc(366px + 22vw);
-  padding: 54px 10px;
+  padding-top: 54px;
   min-height: 450px;
   max-height: 725px;
   overflow: hidden;
@@ -27,7 +28,12 @@
   }
 
   @media only screen and (max-width: 870px) {
-    padding: 32px 9px;
+    padding-top: 32px;
+    padding-bottom: 32px;
+  }
+
+  @media only screen and (max-width: 1200px) {
+    --ifm-spacing-horizontal: 1.625rem;
   }
 
   @media only screen and (min-width: 1600px) {
